# codegraph

./: .codegraph.toml  .codegraph.toml.example  .gitignore  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md  test.py
benches/: index_performance.rs  query_performance.rs
src/: config.rs  main.rs
src/cli/: impact.rs  index.rs  languages.rs  mod.rs  query.rs  serve.rs  start.rs  stats.rs
src/index/: db.rs  mod.rs  schema.rs
src/indexer/: mod.rs  parser.rs  watcher.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/query/: cache.rs  engine.rs  mod.rs
test_python_project/: Simple.java  __init__.py  example.intent  main.py  simple.go  simple.rs  user_manager.py  utils.py
test_python_project/models/: user.py
