[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"
authors = ["Intent Project Team"]
description = "Real-time semantic code index for AI agents via MCP"
license = "MIT"
repository = "https://github.com/antoinedelorme/codegraph"
keywords = ["mcp", "ai", "code-index", "semantic-search", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File watching
notify = "6.1"
walkdir = "2.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# MCP SDK (will use when available, for now we'll implement stdio transport)
# mcp-sdk = "0.1"  # TODO: Add when available

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
regex = "1.10"

# Hashing
blake3 = "1.5"

# Date/Time
chrono = "0.4"

# Tree-sitter parsing
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
insta = "1.34"
proptest = "1.4"

[[bench]]
name = "query_performance"
harness = false

[[bench]]
name = "index_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
